src/test/fail/function_redeclaration.lly
#[
SyntaxError: f has already been declared.
Where: File "test/fail/function_redeclaration.lly" at line 6
]#

define f() {} define f() {}
